--- a/src/pug/includes/modules/content/specialists.pug
+++ b/src/pug/includes/modules/content/specialists.pug
@@ -1,159 +1,4 @@
--
-  var specialists = [
-    {
-      id: 1,
-      name: 'Рыбников Антон Николаевич',
-      tags: [
-        '12 лет опыта',
-        'Ведущий специалист'
-      ],
-      description: [
-        'Проводит все виды массажа лица и тела, помогает избавиться от боли в спине, отёков, целлюлита, решает сложные эстетические проблемы.',
-        'Работал в ведущих медицинских центрах — клинике №1 им. Пирогова, центре диетологии НИИ питания, Федеральном центре реабилитации.',
-        'Член «Международного Альянса Массажистов». Автор методики «Максимально эффективное лечение боли при проведении лечебного массажа», преподаватель школы массажа.'
-      ],
-      reviewsCount: 118,
-      images: {
-        desktop: {
-          webp: {
-            '1x': `assets/img/specialists/1_desktop@1x.webp`,
-            '2x': `assets/img/specialists/1_desktop@2x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/1_desktop@1x.jpg`,
-            '2x': `assets/img/specialists/1_desktop@2x.jpg`
-          }
-        },
-        tablet: false,
-        mobile: {
-          webp: {
-            '1x': `assets/img/specialists/1_mobile@1x.webp`,
-            '2x': `assets/img/specialists/1_mobile@2x.webp`,
-            '3x': `assets/img/specialists/1_mobile@3x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/1_mobile@1x.jpg`,
-            '2x': `assets/img/specialists/1_mobile@2x.jpg`,
-            '3x': `assets/img/specialists/1_mobile@3x.jpg`
-          }
-        }
-      }
-    },
-    {
-      id: 2,
-      name: 'Батькова Наталья Александровна',
-      tags: [
-        '21 год стажа',
-        `Медицинский подход<span class='hidden_mobile'> к массажу</span>`
-      ],
-      description: [
-        'Считает массаж делом своей жизни и постоянно повышает квалификацию. Выполняет все виды массажа, но особенно любит избавлять от лишнего веса и целлюлита, наблюдать, как клиентки становятся легче и счастливее',
-        'За годы опыта работала в самых авторитетных медицинских клиниках и центрах (отделение медицинской реабилитации клиники С.Н. Гринберга, клиника неврологии и остеопатии, а также клиники по коррекции тела с помощью массажа).'
-      ],
-      reviewsCount: 65,
-      images: {
-        desktop: {
-          webp: {
-            '1x': `assets/img/specialists/2_desktop@1x.webp`,
-            '2x': `assets/img/specialists/2_desktop@2x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/2_desktop@1x.jpg`,
-            '2x': `assets/img/specialists/2_desktop@2x.jpg`
-          }
-        },
-        tablet: false,
-        mobile: {
-          webp: {
-            '1x': `assets/img/specialists/2_mobile@1x.webp`,
-            '2x': `assets/img/specialists/2_mobile@2x.webp`,
-            '3x': `assets/img/specialists/2_mobile@3x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/2_mobile@1x.jpg`,
-            '2x': `assets/img/specialists/2_mobile@2x.jpg`,
-            '3x': `assets/img/specialists/2_mobile@3x.jpg`
-          }
-        }
-      }
-    },
-    {
-      id: 3,
-      name: 'Ефременкова Ирина Владимировна',
-      tags: [
-        '10 лет опыта',
-        'Член Международного Альянса Массажистов'
-      ],
-      description: [
-        'Ирина проводит все виды массажа лица и тела, и помогла множеству клиентов избавиться от возрастных проблем, болей в спине, отёков и целлюлита. С большим удовольствием делает скульптурный массаж лица и радуется тому, как преображаются её клиенты.',
-        'Работала в авторитетных медицинских центрах — Центр коррекции фигуры и веса, областная больница восстановительного лечения. Владеет более чем 15 техниками массажа и регулярно повышает квалификацию.'
-      ],
-      reviewsCount: 106,
-      images: {
-        desktop: {
-          webp: {
-            '1x': `assets/img/specialists/3_desktop@1x.webp`,
-            '2x': `assets/img/specialists/3_desktop@2x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/3_desktop@1x.jpg`,
-            '2x': `assets/img/specialists/3_desktop@2x.jpg`
-          }
-        },
-        tablet: false,
-        mobile: {
-          webp: {
-            '1x': `assets/img/specialists/3_mobile@1x.webp`,
-            '2x': `assets/img/specialists/3_mobile@2x.webp`,
-            '3x': `assets/img/specialists/3_mobile@3x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/3_mobile@1x.jpg`,
-            '2x': `assets/img/specialists/3_mobile@2x.jpg`,
-            '3x': `assets/img/specialists/3_mobile@3x.jpg`
-          }
-        }
-      }
-    },
-    {
-      id: 4,
-      name: 'Маликова Татьяна Анатольевна',
-      tags: [
-        '10 лет опыта',
-        'Массаж — и работа, и хобби'
-      ],
-      description: [
-        'Татьяна отлично разбирается во всех видах массажа лица и тела, и постоянно совершенствует мастерство. Она одинаково любит работать над эстетическими и медицинскими проблемами, и уже помогла множеству клиентов избавиться от боли в спине, сбросить вес и омолодить лицо.',
-        'До прихода в нашу клинику Татьяна успела поработать в авторитетных клиниках коррекции лица и тела, и медицинских центрах'
-      ],
-      reviewsCount: 24,
-      images: {
-        desktop: {
-          webp: {
-            '1x': `assets/img/specialists/4_desktop@1x.webp`,
-            '2x': `assets/img/specialists/4_desktop@2x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/4_desktop@1x.jpg`,
-            '2x': `assets/img/specialists/4_desktop@2x.jpg`
-          }
-        },
-        tablet: false,
-        mobile: {
-          webp: {
-            '1x': `assets/img/specialists/4_mobile@1x.webp`,
-            '2x': `assets/img/specialists/4_mobile@2x.webp`,
-            '3x': `assets/img/specialists/4_mobile@3x.webp`
-          },
-          jpg: {
-            '1x': `assets/img/specialists/4_mobile@1x.jpg`,
-            '2x': `assets/img/specialists/4_mobile@2x.jpg`,
-            '3x': `assets/img/specialists/4_mobile@3x.jpg`
-          }
-        }
-      }
-    }
-  ]
+- var specialists = locals.data.globalData.company.specialists
 
 section.specialists
   .container
