--- a/src/pug/pages/articles.pug
+++ b/src/pug/pages/articles.pug
@@ -55,6 +55,35 @@ block variables
           tags: ['Содержит видеоуроки'],
           textPreview: `Головная боль, хроническая усталость, отеки&nbsp;— последствия малоактивного образа жизни
             и&nbsp;сидячей работы, которая создает напряжение в&nbsp;области шеи...`,
+        },
+        {
+          id: 7,
+          url: 'back-massage-for-osteochondrosis.html',
+          title: 'Массаж спины при&nbsp;остеохондрозе',
+          textPreview: `Динамика распространения остеохондроза отличается нарастающим темпом — дегенеративные изменения
+            все чаще диагностируются у молодых...`,
+        },
+        {
+          id: 8,
+          url: 'massage-with-medical-ointments.html',
+          title: 'Массаж с&nbsp;медицинскими мазями',
+          textPreview: `Даже без применения дополнительных препаратов массаж является эффектив&shy;ной восстанавливающей
+            процедурой, улучшающей состояние человека...`,
+        },
+        {
+          id: 9,
+          url: 'osteochondrosis.html',
+          title: 'Остеохондроз',
+          textPreview: `Клинические обследования позво&shy;ночника (рентген, МРТ, КТ), которые периодически проходит
+            каждый пациент, эффективно выявляют все болезненные...`,
+        },
+        {
+          id: 10,
+          url: 'correct-back-massage-at-home.html',
+          tags: ['Содержит видеоуроки'],
+          title: 'Как правильно делать массаж спины в&nbsp;дома&shy;шних условиях + видео',
+          textPreview: `Дефицит свободного времени и уста&shy;лость в конце рабочего дня&nbsp;— главные причины, почему
+            визит к&nbsp;массажисту... `,
         }
       ]
     }
@@ -62,7 +91,7 @@ block variables
 block head
 
 block content
-  .articles-page__wrap
+  .service-page__wrap.articles-page__wrap
     .container
       h1.articles-page__title.heading Интересное
       ul.articles-page__list
