--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -41,7 +41,7 @@ block variables
 block head
 
 block content
-  .contact-info__wrap
+  .service-page__wrap.contact-info__wrap
     .container
       h1.contact-info__title.heading Контакты
       .contact-info__content
