--- a/src/pug/pages/prices.pug
+++ b/src/pug/pages/prices.pug
@@ -9,14 +9,15 @@ block variables
       description: `Массаж, цены, акции и скидки — прайс-лист со стоимостью услуг на массаж`,
       keywords: `цены, акции, скидки, массаж, Москва`,
       canonical: 'http://expert-massage-clinic.ru/prices.html',
-      pageClass: 'prices-page',
+      pageClass: 'prices-page service-page',
       theme: 'main'
     }
 
 block head
 
 block content
-  main
-    h1 Страница "Цены и акции"
+  .service-page__wrap.prices-page__wrap
+    .container
+      h1.prices-page__title.heading Цены и акции
 
 block script
