--- a/src/pug/pages/reviews.pug
+++ b/src/pug/pages/reviews.pug
@@ -108,7 +108,7 @@ block variables
 block head
 
 block content
-  .reviews-page__wrap
+  .service-page__wrap.reviews-page__wrap
     .container
       h1.reviews-page__title.heading Отзывы
       +rating-block().reviews-page__rating
