Create prices and promotions page

--- a/src/assets/scss/blocks/about-page/about-specialists.scss
+++ b/src/assets/scss/blocks/about-page/about-specialists.scss
@@ -135,7 +135,7 @@
           &__image {
             position: absolute;
 
-            top: 28%;
+            top: 12rem;
             right: 0;
 
             img {
