--- a/src/pug/includes/modules/content/application-form/application-block.pug
+++ b/src/pug/includes/modules/content/application-form/application-block.pug
@@ -1,7 +1,7 @@
 - var formHeading = 'Оставьте заявку и получите скидку 20% на первый сеанс'
 - var formText = 'Вы увидите, как работает специалист, получи&shy;те профессиональную консультацию и&nbsp;сможе&shy;те определиться с&nbsp;планом процедур. Если вам не&nbsp;понравится, мы вернём деньги за&nbsp;сеанс'
 if locals.data.pageData.theme === '1'
-  - formHeading = 'Акция на март и апрель. Любое количество сеансов скульптурно-буккального массажа со скидкой 25%'
+  - formHeading = 'Акция на июль и август. Любое количество сеансов скульптурно-буккального массажа со скидкой 25%'
   - formText = 'Мы хотим подарить большему количеству клиентов возможность стать прекраснее и запускаем акцию на самый популярный массаж лица в нашей клинике. Не откладывайте преображение — если первый сеанс вам не понравится, мы вернём деньги'
 
 mixin sticker(mainText, secondaryText, preTitle)
