--- a/src/pug/utils/global-data.pug
+++ b/src/pug/utils/global-data.pug
@@ -44,8 +44,8 @@
         },
         duration: 60,
         promo: {
-          text: 'Акция — скидка на первый сеанс 25%',
-          starPlacement: 2 // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
+          text: `<span class=''>Акция</span> — скидка на первый сеанс 25%`,
+          starPlacement: 2 // 2 - first price, 3 - second price, 4 - duration
         },
         shortDescription: 'Рекомендован при выраженном целлюлите. Процедура включает лимфодренаж и обёртывание'
       },
@@ -117,7 +117,7 @@
         },
         duration: 50,
         promo: {
-          text: 'Акция — скидка на июль и август 25%',
+          text: `<span class=''>Акция</span> — скидка на июль и август 25%`,
           starPlacement: 3 // 1 - massage name, 2 - first price, 3 - second price, 4 - duration
         },
         shortDescription: 'Самый эффективный массаж лица. Полноценная альтернатива пластике, омоложение и улучшение черт лица'
@@ -236,44 +236,6 @@
         },
         {
           id: 2,
-          name: 'Батькова Наталья Александровна',
-          tags: [
-            '21 год стажа',
-            `Медицинский подход<span class='hidden_mobile'> к массажу</span>`
-          ],
-          description: [
-            'Считает массаж делом своей жизни и постоянно повышает квалификацию. Выполняет все виды массажа, но особенно любит избавлять от лишнего веса и целлюлита, наблюдать, как клиентки становятся легче и счастливее',
-            'За годы опыта работала в самых авторитетных медицинских клиниках и центрах (отделение медицинской реабилитации клиники С.Н. Гринберга, клиника неврологии и остеопатии, а также клиники по коррекции тела с помощью массажа).'
-          ],
-          reviewsCount: 65,
-          images: {
-            desktop: {
-              webp: {
-                '1x': `assets/img/specialists/2_desktop@1x.webp`,
-                '2x': `assets/img/specialists/2_desktop@2x.webp`
-              },
-              jpg: {
-                '1x': `assets/img/specialists/2_desktop@1x.jpg`,
-                '2x': `assets/img/specialists/2_desktop@2x.jpg`
-              }
-            },
-            tablet: false,
-            mobile: {
-              webp: {
-                '1x': `assets/img/specialists/2_mobile@1x.webp`,
-                '2x': `assets/img/specialists/2_mobile@2x.webp`,
-                '3x': `assets/img/specialists/2_mobile@3x.webp`
-              },
-              jpg: {
-                '1x': `assets/img/specialists/2_mobile@1x.jpg`,
-                '2x': `assets/img/specialists/2_mobile@2x.jpg`,
-                '3x': `assets/img/specialists/2_mobile@3x.jpg`
-              }
-            }
-          }
-        },
-        {
-          id: 3,
           name: 'Ефременкова Ирина Владимировна',
           tags: [
             '10 лет опыта',
@@ -306,6 +268,44 @@
                 '1x': `assets/img/specialists/3_mobile@1x.jpg`,
                 '2x': `assets/img/specialists/3_mobile@2x.jpg`,
                 '3x': `assets/img/specialists/3_mobile@3x.jpg`
+              }
+            }
+          }
+        },
+        {
+          id: 3,
+          name: 'Батькова Наталья Александровна',
+          tags: [
+            '21 год стажа',
+            `Медицинский подход<span class='hidden_mobile'> к массажу</span>`
+          ],
+          description: [
+            'Считает массаж делом своей жизни и постоянно повышает квалификацию. Выполняет все виды массажа, но особенно любит избавлять от лишнего веса и целлюлита, наблюдать, как клиентки становятся легче и счастливее',
+            'За годы опыта работала в самых авторитетных медицинских клиниках и центрах (отделение медицинской реабилитации клиники С.Н. Гринберга, клиника неврологии и остеопатии, а также клиники по коррекции тела с помощью массажа).'
+          ],
+          reviewsCount: 65,
+          images: {
+            desktop: {
+              webp: {
+                '1x': `assets/img/specialists/2_desktop@1x.webp`,
+                '2x': `assets/img/specialists/2_desktop@2x.webp`
+              },
+              jpg: {
+                '1x': `assets/img/specialists/2_desktop@1x.jpg`,
+                '2x': `assets/img/specialists/2_desktop@2x.jpg`
+              }
+            },
+            tablet: false,
+            mobile: {
+              webp: {
+                '1x': `assets/img/specialists/2_mobile@1x.webp`,
+                '2x': `assets/img/specialists/2_mobile@2x.webp`,
+                '3x': `assets/img/specialists/2_mobile@3x.webp`
+              },
+              jpg: {
+                '1x': `assets/img/specialists/2_mobile@1x.jpg`,
+                '2x': `assets/img/specialists/2_mobile@2x.jpg`,
+                '3x': `assets/img/specialists/2_mobile@3x.jpg`
               }
             }
           }
@@ -364,6 +364,126 @@
   }
 -
   locals.data.globalData.company.businessDuration = locals.data.globalData.currentYear - locals.data.globalData.company.foundationYear
+  locals.data.globalData.priceList = {
+    sections: {
+      body: {
+        title: 'Для здоровья тела',
+        massages: [
+          locals.data.globalData.massages['back-massage'],
+          locals.data.globalData.massages['body-lymphatic-drainage'],
+          locals.data.globalData.massages['fullbody-massage'],
+          locals.data.globalData.massages['sports-massage'],
+          locals.data.globalData.massages['neck-massage']
+        ]
+      },
+      face: {
+        title: 'Для красоты лица',
+        massages: [
+          locals.data.globalData.massages['sculptural-buccal-massage'],
+          locals.data.globalData.massages['facial-lymphatic-drainage'],
+          locals.data.globalData.massages['classic-facial-massage'],
+          locals.data.globalData.massages['chiromassage'],
+          locals.data.globalData.massages['japanese-asahi-massage']
+        ]
+      },
+      figure: {
+        title: 'Для стройной фигуры',
+        massages: [
+          locals.data.globalData.massages['anti-cellulite-massage'],
+          locals.data.globalData.massages['body-lymphatic-drainage'],
+          locals.data.globalData.massages['figure-modeling']
+        ]
+      }
+    },
+    procedures: [
+      {
+        name: 'Обёртывание общее',
+        price: 2700
+      },
+      {
+        name: 'Обёртывание антицеллюлитное',
+        price: 2200
+      },
+      {
+        name: 'Массаж баночный антицеллюлитный',
+        price: 1700
+      },
+      {
+        name: 'Массаж баночный спины',
+        price: 1500
+      }
+    ],
+    additions: [
+      {
+        name: 'Массаж грудной клетки по окружности',
+        price: 400
+      },
+      {
+        name: 'Массаж живота',
+        price: 500
+      },
+      {
+        name: 'Массаж одной руки',
+        price: 400
+      },
+      {
+        name: 'Массаж обеих рук',
+        price: 700
+      },
+      {
+        name: 'Массаж одной руки и лопатки',
+        price: 600
+      },
+      {
+        name: 'Массаж кисти, лучезапястного сустава и предплечья',
+        price: 400
+      },
+      {
+        name: 'Массаж локтевого сустава',
+        price: 200
+      },
+      {
+        name: 'Массаж плечевого сустава',
+        price: 300
+      },
+      {
+        name: 'Массаж стоп',
+        price: 500
+      },
+      {
+        name: 'Массаж стопы и голени',
+        price: 600
+      },
+      {
+        name: 'Массаж голеностопного сустава',
+        price: 200
+      },
+      {
+        name: 'Массаж коленного сустава',
+        price: 200
+      },
+      {
+        name: 'Массаж тазобедренного сустава',
+        price: 400
+      },
+      {
+        name: 'Массаж пояснично-крестцовой области и одной ноги',
+        price: 800
+      },
+      {
+        name: 'Массаж пояснично-крестцовой области и обеих ног',
+        price: 1200
+      },
+      {
+        name: 'Массаж одной ноги',
+        price: 500
+      },
+      {
+        name: 'Массаж обеих ног',
+        price: 800
+      }
+    ]
+  }
   locals.data.globalData.commonFaceFaq = [
     {
       question: `Как именно помогает массаж?<br>
