Markup of 12 step article

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -137,3 +137,8 @@
 
 @use 'blocks/articles-page/articles-page';
 @use 'blocks/articles-page/articles-page-card';
+
+// Articles
+@use 'blocks/page/article-page';
+
+@use 'blocks/article-page/article-navigation';
